syntax = "proto2";

package com.example.testing;

message TestingMessage {
  required string test = 1;
}
